2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg: Update to latest version of ISL and
	CLooG, add ptile.
	* config/base/driver.cfg: Configure ptile by default.

2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg: Update to latest version of ISL and
	CLooG.

2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Use RSFME only when the outer loop
	is sequential.

2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Use the guards surrounding the loop
	nest in the scop associated to the OTL tree sent to PTile.

2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Fix a bug in SCoP recomputation
	after OTL, fix the PAST.

2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Finalize OTL computation.

	* bin/pocc-util.in: Fix typo in synchronization website.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Attempt to compute better OTL
	loop bounds (still unsafe).

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Fix a bug in OTL iterator naming,
	improve the mechanism.

	* driver/pocc/driver-clastops.c: Fix a bug in the newly created
	iterator declaration.

	* driver/src/options.c: Activate --use-past when --ptile is on.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c,
	* driver/pocc/driver-clastops.c,
	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg: Propagate name change from 'primetile'
	to 'ptile'.

	* bin/pocc-util.in: Fix a typo in the 'upgrade' command.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Update to benefit from PAST latest
	API functionalities.
