@@ -62,7 +62,7 @@ make-depends: piplib scoplib isl
 category: analyzers
 module: polyfeat
 location: archives/polyfeat-0.1.0.tar.gz
-retrieve-method: wget
+retrieve-method: local
 configure: --with-piplib=$poccsrcdir/math/install-piplib --with-scoplib=$poccsrcdir/ir/install-scoplib --with-candl=$poccsrcdir/analyzers/install-candl --with-polylib=$poccsrcdir/math/install-polylib --with-fm=$poccsrcdir/math/install-fm
 make-depends: piplib scoplib candl polylib fm
 
@@ -135,6 +135,16 @@ retrieve-method: local
 bootstrap: bootstrap.sh
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools
 make-depends: scoplib cloog candl piplib scoptools clasttools
+
+[ptile-0.1.0]
+category: generators
+module: ptile
+location: archives/ptile-0.1.0.tar.gz
+retrieve-method: local
+bootstrap: bootstrap.sh
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools --with-past=$poccsrcdir/ir/install-past
+make-depends: scoplib cloog candl piplib scoptools clasttools past
+
 
 ## Optimizers
 [letsee-0.2.0-pre]
