@@ -136,6 +136,15 @@ bootstrap: bootstrap.sh
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools
 make-depends: scoplib cloog candl piplib scoptools clasttools
 
+[ptile-0.1.0]
+category: generators
+module: ptile
+location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/ptile-0.1.0.tar.gz
+retrieve-method: local
+bootstrap: bootstrap.sh
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools --with-past=$poccsrcdir/ir/install-past
+make-depends: scoplib cloog candl piplib scoptools clasttools past
+
 ## Optimizers
 [letsee-0.2.0-pre]
 category: optimizers
